--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -19,8 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed": "ts-node -r tsconfig-paths/register src/seed.ts",
-    "typeorm": "typeorm-ts-node-commonjs -d data-source.ts",
-    "migration:generate": "npm run typeorm -- migration:generate src/migrations/%npm_config_name%",
+    "seed:prod": "node dist/src/seed.js",
+    "typeorm": "typeorm-ts-node-commonjs -d dist/data-source.js",
+    "migration:generate": "npm run typeorm -- migration:generate src/migrations/",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert"
   },
@@ -56,6 +57,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
