--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,65 @@
 services:
   # PostgreSQL Database Service
   db:
-    image: postgres:15 # Use a specific PostgreSQL version
-    container_name: magic_store_db
+    image: postgres:15
+    container_name: magic_store_db_prod
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-magic_store}
+      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod} # Consider using different DB name for prod
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-    ports:
-      - "5432:5432" # Map host port 5432 to container port 5432
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Use environment variable for password in prod
     volumes:
-      - postgres_data:/var/lib/postgresql/data # Persist data using a named volume
+      - postgres_data_prod:/var/lib/postgresql/data # Use a separate volume for prod data
     restart: unless-stopped
+    networks:
+      - internal_network
 
   # Backend API Service (NestJS)
   api:
-    image: node:20-slim # Use a Node.js base image
-    container_name: magic_store_api
-    working_dir: /usr/src/app
-    volumes:
-      - .:/usr/src/app # Mount entire project root
-      - api_node_modules:/usr/src/app/node_modules # Use a named volume for node_modules
-    ports:
-      - "3000:3000" # Map host port 3000 to container port 3000
+    container_name: magic_store_api_prod
+    build:
+      context: . # Context is the monorepo root
+      dockerfile: backend/api/Dockerfile.prod # Path to Dockerfile relative to context
     environment:
-      NODE_ENV: development
-      POSTGRES_HOST: db # Service name defined above
+      NODE_ENV: production
+      PORT: 3000 # NestJS listens on this port internally
+      POSTGRES_HOST: db
       POSTGRES_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-      POSTGRES_DB: ${POSTGRES_DB:-magic_store}
-    # Command to install dependencies (if needed) and start in dev mode
-    # Note: The working_dir is now the root, adjust npm commands if needed
-    # Assuming backend/api/package.json exists for the start:dev script
-    command: sh -c "cd backend/api && npm install && npm run start:dev"
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Use environment variable
+      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod}
+      # Add other production environment variables (JWT_SECRET, etc.) here
+      JWT_SECRET: ${JWT_SECRET} # Pass JWT_SECRET from .env file
     depends_on:
-      - db # Ensure db starts before api
+      - db
     restart: unless-stopped
+    networks:
+      - internal_network
+      - web_network # Connect to the network Nginx is on
 
-  # Frontend Service (Angular)
+  # Frontend Service (Nginx serving Angular build)
   frontend:
-    image: node:20-slim # Use a Node.js base image
-    container_name: magic_store_frontend
-    working_dir: /usr/src/app
-    volumes:
-      - .:/usr/src/app # Mount entire project root
-      - frontend_node_modules:/usr/src/app/node_modules # Use a named volume for node_modules
-      - angular_cache:/usr/src/app/.angular # Cache Angular build artifacts
+    container_name: magic_store_frontend_prod
+    build:
+      context: . # Build context is the monorepo root
+      dockerfile: projects/storefront/Dockerfile.prod # We will create this Dockerfile
     ports:
-      - "4200:4200" # Map host port 4200 to container port 4200
-    # Command to install dependencies (if needed) and start Angular dev server
-    # --host 0.0.0.0 makes it accessible outside the container
-    # --poll=1000 helps with file change detection in some environments
-    command: sh -c "npm install && npx ng serve storefront --host 0.0.0.0 --poll=1000"
+      - "80:80" # Expose Nginx port 80 to the host
+    volumes:
+      # Mount the custom Nginx configuration
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - api # Optional: ensure api starts before frontend (useful if frontend calls api on startup)
+      - api # Ensure API is ready before frontend tries to proxy to it
     restart: unless-stopped
+    networks:
+      - web_network # Connect to the network Nginx is on
+
+# Define Networks
+networks:
+  internal_network: # For communication between api and db
+    driver: bridge
+  web_network:      # For communication between frontend (Nginx) and api, and external access
+    driver: bridge
 
 # Named Volumes Definition
 volumes:
-  postgres_data:
-  api_node_modules:
-  frontend_node_modules:
-  angular_cache:
+  postgres_data_prod: # Separate volume for production database
