--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,65 +1,78 @@
-services:
-  # PostgreSQL Database Service
-  db:
-    image: postgres:15 # Use a specific PostgreSQL version
-    container_name: magic_store_db
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-magic_store}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-    ports:
-      - "5432:5432" # Map host port 5432 to container port 5432
-    volumes:
-      - postgres_data:/var/lib/postgresql/data # Persist data using a named volume
-    restart: unless-stopped
+# docker-compose.dev.yml
+# Development environment using production DB volume/settings
 
-  # Backend API Service (NestJS)
+services:
+  # PostgreSQL Database Service (Using Production Volume/Settings)
+  db:
+    image: postgres:15
+    container_name: magic_store_db_prod # Keep prod name to match volume/settings context
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod} # Production DB name
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Production password variable
+    volumes:
+      - postgres_data_prod:/var/lib/postgresql/data # Use PRODUCTION volume
+    restart: unless-stopped
+    networks:
+      - internal_network
+
+  # Backend API Service (NestJS - Development Mode)
   api:
-    image: node:20-slim # Use a Node.js base image
-    container_name: magic_store_api
+    image: node:20-slim # Use Node image for dev server
+    container_name: magic_store_api_prod # Keep prod name to match DB context
     working_dir: /usr/src/app
     volumes:
-      - .:/usr/src/app # Mount entire project root
-      - api_node_modules:/usr/src/app/node_modules # Use a named volume for node_modules
-    ports:
-      - "3000:3000" # Map host port 3000 to container port 3000
+      - .:/usr/src/app # Mount project root for code changes
+      - api_node_modules:/usr/src/app/backend/api/node_modules # Volume for API node_modules
     environment:
-      NODE_ENV: development
-      POSTGRES_HOST: db # Service name defined above
+      NODE_ENV: development # Set to development mode
+      PORT: 3000
+      POSTGRES_HOST: db
       POSTGRES_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-      POSTGRES_DB: ${POSTGRES_DB:-magic_store}
-    # Command to install dependencies (if needed) and start in dev mode
-    # Note: The working_dir is now the root, adjust npm commands if needed
-    # Assuming backend/api/package.json exists for the start:dev script
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Use Production password variable
+      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod} # Use Production DB name
+      JWT_SECRET: ${JWT_SECRET:-SOME_DEFAULT_DEV_SECRET} # Provide a default for dev
+    # Command to install dependencies and start dev server inside the api directory
     command: sh -c "cd backend/api && npm install && npm run start:dev"
     depends_on:
-      - db # Ensure db starts before api
+      - db
     restart: unless-stopped
+    networks:
+      - internal_network
+      - web_network
 
-  # Frontend Service (Angular)
+  # Frontend Service (Angular - Development Mode)
   frontend:
-    image: node:20-slim # Use a Node.js base image
-    container_name: magic_store_frontend
+    image: node:20-slim # Use Node image for dev server
+    container_name: magic_store_frontend_dev # Use _dev suffix for clarity
     working_dir: /usr/src/app
     volumes:
-      - .:/usr/src/app # Mount entire project root
-      - frontend_node_modules:/usr/src/app/node_modules # Use a named volume for node_modules
-      - angular_cache:/usr/src/app/.angular # Cache Angular build artifacts
+      - .:/usr/src/app # Mount project root for code changes
+      - frontend_node_modules:/usr/src/app/node_modules # Volume for root node_modules
+      - angular_cache:/usr/src/app/.angular # Volume for Angular cache
     ports:
-      - "4200:4200" # Map host port 4200 to container port 4200
-    # Command to install dependencies (if needed) and start Angular dev server
+      - "80:4200" # Expose Angular dev server on host port 80 (like prod)
+    # Command to install dependencies and start Angular dev server
     # --host 0.0.0.0 makes it accessible outside the container
-    # --poll=1000 helps with file change detection in some environments
-    command: sh -c "npm install && npx ng serve storefront --host 0.0.0.0 --poll=1000"
+    # --poll=1000 helps with file change detection in Docker volumes
+    command: sh -c "npm install && npx ng serve storefront --host 0.0.0.0 --poll=1000 --allowed-hosts smartyapp.co.il"
     depends_on:
-      - api # Optional: ensure api starts before frontend (useful if frontend calls api on startup)
+      - api # Wait for API to be ready
     restart: unless-stopped
+    networks:
+      - web_network
+
+# Define Networks (matching production structure)
+networks:
+  internal_network:
+    driver: bridge
+  web_network:
+    driver: bridge
 
 # Named Volumes Definition
 volumes:
-  postgres_data:
-  api_node_modules:
-  frontend_node_modules:
-  angular_cache:
+  postgres_data_prod: {} # Use existing volume or create if not found
+  api_node_modules: {} # Development volume for API node_modules
+  frontend_node_modules: {} # Development volume for root node_modules
+  angular_cache: {} # Development volume for Angular cache
