--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,39 +1,32 @@
-# docker-compose.dev.yml
-# Development environment using production DB volume/settings
-
 services:
-  # PostgreSQL Database Service (Using Production Volume/Settings)
   db:
     image: postgres:15
-    container_name: magic_store_db_prod # Keep prod name to match volume/settings context
+    container_name: magic_store_db_prod_dev2
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod} # Production DB name
+      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod}
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Production password variable
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - postgres_data_prod:/var/lib/postgresql/data # Use PRODUCTION volume
+      - postgres_data_prod:/var/lib/postgresql/data
     restart: unless-stopped
     networks:
       - internal_network
-
-  # Backend API Service (NestJS - Development Mode)
   api:
-    image: node:20-slim # Use Node image for dev server
-    container_name: magic_store_api_prod # Keep prod name to match DB context
+    image: node:20-slim
+    container_name: magic_store_api_prod_dev2
     working_dir: /usr/src/app
     volumes:
-      - .:/usr/src/app # Mount project root for code changes
-      - api_node_modules:/usr/src/app/backend/api/node_modules # Volume for API node_modules
+      - .:/usr/src/app
+      - api_node_modules:/usr/src/app/backend/api/node_modules
     environment:
-      NODE_ENV: development # Set to development mode
-      PORT: 3000
+      NODE_ENV: development
+      PORT: 3001
       POSTGRES_HOST: db
       POSTGRES_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Use Production password variable
-      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod} # Use Production DB name
-      JWT_SECRET: ${JWT_SECRET:-SOME_DEFAULT_DEV_SECRET} # Provide a default for dev
-    # Command to install dependencies and start dev server inside the api directory
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod}
+      JWT_SECRET: ${JWT_SECRET:-SOME_DEFAULT_DEV_SECRET}
     command: sh -c "cd backend/api && npm install && npm run start:dev"
     depends_on:
       - db
@@ -41,38 +34,29 @@ services:
     networks:
       - internal_network
       - web_network
-
-  # Frontend Service (Angular - Development Mode)
   frontend:
-    image: node:20-slim # Use Node image for dev server
-    container_name: magic_store_frontend_dev # Use _dev suffix for clarity
+    image: node:20-slim
+    container_name: magic_store_frontend_dev2
     working_dir: /usr/src/app
     volumes:
-      - .:/usr/src/app # Mount project root for code changes
-      - frontend_node_modules:/usr/src/app/node_modules # Volume for root node_modules
-      - angular_cache:/usr/src/app/.angular # Volume for Angular cache
+      - .:/usr/src/app
+      - frontend_node_modules:/usr/src/app/node_modules
+      - angular_cache:/usr/src/app/.angular
     ports:
-      - "80:4200" # Expose Angular dev server on host port 80 (like prod)
-    # Command to install dependencies and start Angular dev server
-    # --host 0.0.0.0 makes it accessible outside the container
-    # --poll=1000 helps with file change detection in Docker volumes
+      - "81:4200"
     command: sh -c "npm install && npx ng serve storefront --host 0.0.0.0 --poll=1000 --allowed-hosts smartyapp.co.il"
     depends_on:
-      - api # Wait for API to be ready
+      - api
     restart: unless-stopped
     networks:
       - web_network
-
-# Define Networks (matching production structure)
 networks:
   internal_network:
     driver: bridge
   web_network:
     driver: bridge
-
-# Named Volumes Definition
 volumes:
-  postgres_data_prod: {} # Use existing volume or create if not found
-  api_node_modules: {} # Development volume for API node_modules
-  frontend_node_modules: {} # Development volume for root node_modules
-  angular_cache: {} # Development volume for Angular cache
+  postgres_data_prod: {}
+  api_node_modules: {}
+  frontend_node_modules: {}
+  angular_cache: {}
