--- a/projects/global_marketplace_app/pubspec.yaml
+++ b/projects/global_marketplace_app/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   flutter_secure_storage: ^9.2.2
-
+  shared_preferences: ^2.3.5
+  provider: ^6.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
