--- a/projects/global_marketplace_app/pubspec.yaml
+++ b/projects/global_marketplace_app/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.1
-  flutter_secure_storage: ^9.2.2
+  http: ^1.4.0
+  flutter_secure_storage: ^9.2.4
   shared_preferences: ^2.3.5
-  provider: ^6.1.2
+  provider: ^6.1.5
+  webview_flutter: ^4.13.0
+  jwt_decoder: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
