--- a/projects/global_marketplace_app/pubspec.yaml
+++ b/projects/global_marketplace_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^6.1.5
   webview_flutter: ^4.13.0
   jwt_decoder: ^2.0.1
+  google_fonts: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
