--- a/projects/global_marketplace_app/pubspec.yaml
+++ b/projects/global_marketplace_app/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   http: ^1.4.0
   flutter_secure_storage: ^9.2.4
   shared_preferences: ^2.3.5
@@ -37,6 +39,7 @@ dependencies:
   webview_flutter: ^4.13.0
   jwt_decoder: ^2.0.1
   google_fonts: ^6.2.1
+  intl: ^0.20.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +66,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
