Update Android Gradle Properties and Refactor Shipping Address Screen Initialization
- Added configuration to gradle.properties to address Kotlin compilation issues, including disabling incremental compilation and adjusting the compiler execution strategy.
- Refactored the ShippingAddressScreen to initialize address fetching in didChangeDependencies instead of initState, improving state management and preventing redundant calls.

--- a/projects/global_marketplace_app/android/gradle.properties
+++ b/projects/global_marketplace_app/android/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+# Fix for Kotlin compilation issues with different drive roots
+kotlin.incremental=false
+kotlin.compiler.execution.strategy=in-process
+org.gradle.caching=false
