--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,7 +25,7 @@ services:
       - .:/usr/src/app
       - api_node_modules:/usr/src/app/backend/api/node_modules
     ports:
-      - "9229:9229" # Expose debug port
+      - "${DEBUG_PORT:-9229}:9229" # Expose debug port
     environment:
       NODE_ENV: development
       PORT: 3000 # NestJS listens on this port internally
@@ -50,7 +50,7 @@ services:
     image: nginx:stable-alpine
     container_name: magic_store_nginx_dev
     ports:
-      - "80:80" # Expose port 80 to the host
+      - "${NGINX_PORT:-80}:80" # Expose port 80 to the host
     volumes:
       # Mount the custom Nginx configuration
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
