Make store-management-frontend-dev optional with profile
- Add 'store-management' profile to store-management-frontend-dev service
- Update README with instructions for optional store-management service
- Default startup now excludes store-management to reduce resource usage

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -77,6 +77,8 @@ services:
 
   store-management-frontend-dev:
     image: node:20-slim
+    profiles:
+      - store-management
     working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
