Add web chat simulator for WhatsApp bot testing
- Add WebChatModule with controller and service for web-based chat interface
- Create WhatsApp Web UI clone HTML interface (public/index.html)
- Integrate web chat with existing WhatsApp state machine
- Add public folder assets configuration in nest-cli.json
- Update Dockerfile.prod to include public folder
- Export WhatsappService from WhatsappModule for reuse
- Web chat uses JWT authentication and prefixes user IDs to prevent collisions

--- a/backend/api/Dockerfile.prod
+++ b/backend/api/Dockerfile.prod
@@ -45,6 +45,8 @@ COPY --from=builder /usr/src/app/node_modules ./node_modules
 COPY --from=builder /usr/src/app/backend/api/node_modules ./backend/api/node_modules
 # Copy built application
 COPY --from=builder /usr/src/app/backend/api/dist ./backend/api/dist
+# Copy public folder for web chat simulator
+COPY --from=builder /usr/src/app/backend/api/public ./backend/api/public
 # Copy backend package.json for running the app
 COPY --from=builder /usr/src/app/backend/api/package.json ./backend/api/package.json
 
