Enhance nginx configuration for improved service routing
- Updated the proxy configuration for the Angular development server to use Docker's internal DNS resolver and a variable for the upstream service.

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -52,7 +52,10 @@ server {
 
     # Proxy requests to the Angular development server
     location / {
-        proxy_pass http://store-management-frontend-dev:4200; # Proxy to the Angular dev server service
+        # Use Docker's internal DNS resolver
+        resolver 127.0.0.11 valid=10s;
+        set $upstream_store_management store-management-frontend-dev; # Use a variable to allow resolver
+        proxy_pass http://$upstream_store_management:4200; # Proxy to the Angular dev server service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -87,4 +90,41 @@ server {
     # For simplicity, assuming API calls go to the main domain or are routed externally.
     # If API calls originate from the manager subdomain, you might need a similar /api/ location here
     # or ensure your API service handles CORS for the manager subdomain.
+}
+
+# Server block for the Seedbox subdomain
+server {
+    listen 80;
+    server_name seedbox.localhost seedbox.smartyapp.co.il; # Production subdomain
+
+    # Proxy requests to the qBittorrent web UI
+    location / {
+        proxy_pass http://qbittorrent:9999; # Proxy to the qBittorrent web UI
+        
+        # Standard proxy headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        
+        # Fix CSRF issues by ensuring Referer matches Host
+        # qBittorrent checks Referer against Host, so we rewrite Referer if needed
+        proxy_set_header Referer $scheme://$host$request_uri;
+        
+        # Disable buffering for better compatibility
+        proxy_buffering off;
+        proxy_request_buffering off;
+        
+        # Increase timeouts for long-running requests
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_read_timeout 300;
+        
+        # WebSocket support (if needed)
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
 }
