Update VSCode settings to enable TypeScript experimental features
- Added "typescript.experimental.useTsgo" setting to improve TypeScript performance and features in the development environment.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,6 @@
   "typescript.preferences.quoteStyle": "single",
   "javascript.preferences.quoteStyle": "single",
   "typescript.preferences.importModuleSpecifier": "relative",
-  "javascript.preferences.importModuleSpecifier": "relative"
+  "javascript.preferences.importModuleSpecifier": "relative",
+  "typescript.experimental.useTsgo": true
 }
