The  function works with

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,7 +5,10 @@ server {
 
     # Proxy requests to the Angular development server for storefront
     location / {
-        proxy_pass http://172.21.0.4:4200; # Proxy to the Angular dev server service (storefront)
+        # Use Docker's internal DNS resolver
+        resolver 127.0.0.11 valid=10s;
+        set $upstream_frontend frontend; # Use a variable to allow resolver
+        proxy_pass http://$upstream_frontend:4200; # Proxy to the Angular dev server service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
