Add Context Spreading Pattern documentation and enhance Docker Compose configuration
- Introduced a new markdown file detailing the Context Spreading Pattern for state management.
- Added a qBittorrent service to the Docker Compose development configuration for improved media handling.
- Updated TypeScript and TypeScript-ESLint versions in package.json and package-lock.json for better compatibility and features.
- Enhanced the web chat module with new message handling capabilities and improved state management.
- Refactored various handlers and services to streamline message processing and state transitions in the WhatsApp bot implementation.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -42,6 +42,26 @@ services:
     networks:
       - internal_network
       - web_network
+    # qBittorrent Seedbox Service
+
+  qbittorrent:
+    image: lscr.io/linuxserver/qbittorrent:latest
+    container_name: qbittorrent_seedbox
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=UTC
+      - WEBUI_PORT=9999
+      - TORRENTING_PORT=49152
+    volumes:
+      - ./seedbox/config:/config
+      - ./seedbox/downloads:/downloads
+    ports:
+      - "49152:49152"
+      - "49152:49152/udp"
+    restart: unless-stopped
+    networks:
+      - web_network # Connect to the network Nginx is on
 
   # Nginx service to route requests to frontends based on hostname
   nginx:
