--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # Use environment variable
       POSTGRES_DB: ${POSTGRES_DB:-magic_store_prod}
-      JWT_SECRET: ${JWT_SECRET} # Pass JWT_SECRET from .env file
+      JWT_SECRET: ${JWT_SECRET}, # Pass JWT_SECRET from .env file,
+      env_file: .env
       WHATSAPP_ACCESS_TOKEN: ${WHATSAPP_ACCESS_TOKEN}
     depends_on:
       - db
