Fix console errors, update product card layout, fix translations, and resolve server issues
- Fix cart service error handling and API calls
- Move product name/price overlay to bottom of images with background visibility
- Fix footer navigation translations to show actual page names
- Update favicon serving in nginx
- Fix various component issues and translations
- Resolve Docker container startup issues

--- a/docker/nginx/Dockerfile.prod
+++ b/docker/nginx/Dockerfile.prod
@@ -52,6 +52,9 @@ FROM nginx:stable-alpine
 COPY --from=storefront_builder /usr/src/app/dist/storefront/browser /usr/share/nginx/html/storefront
 COPY --from=store_management_builder /usr/src/app/dist/store-management/browser /usr/share/nginx/html/store-management
 
+# Copy favicon to the root for direct serving
+COPY --from=storefront_builder /usr/src/app/dist/storefront/browser/favicon.ico /usr/share/nginx/html/favicon.ico
+
 # Copy the custom Nginx configuration
 COPY docker/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
