--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,6 +3,12 @@ server {
     listen 80;
     server_name localhost smartyapp.co.il; # Production domain
 
+    # Serve favicon.ico directly from nginx
+    location = /favicon.ico {
+        root /usr/share/nginx/html;
+        try_files /favicon.ico =404;
+    }
+
     # Proxy requests to the Angular development server for storefront
     location / {
         proxy_pass http://frontend:4200; # Proxy to the Angular dev server service (storefront)
