--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "buffer-equal-constant-time": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
